# personal-finance-agent

./: .gitignore  main.py  personal-finance-agent-ideas.md  pyproject.toml  start.bat  start.sh
src/finance_agent/: llm.py  orchestrator.py  setup.py
