[project]
name = "personal-finance-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.3",
    "langchain>=1.3.11",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.5",
    "pydantic>=2.13.4",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "mypy>=2.1.0",
    "ruff>=0.15.16",
]
